Reenable in master so we can try to rewrite it

--- a/korganizer/plugins/CMakeLists.txt
+++ b/korganizer/plugins/CMakeLists.txt
@@ -2,6 +2,5 @@ add_subdirectory(datenums)
 add_subdirectory(hebrew)
 add_subdirectory(printing)
 add_subdirectory(picoftheday)
-# Laurent, wikimedia changed api so this plugins can't work
-#add_subdirectory(thisdayinhistory)
+add_subdirectory(thisdayinhistory)
 
