SVN_SILENT made messages (.desktop file)

--- a/kmail/kcm_kpimidentities/kcm_kpimidentities.desktop
+++ b/kmail/kcm_kpimidentities/kcm_kpimidentities.desktop
@@ -167,6 +167,7 @@ X-KDE-Keywords[pl]=kmail,tożsamość
 X-KDE-Keywords[pt]=kmail,identidade
 X-KDE-Keywords[pt_BR]=kmail,identidade
 X-KDE-Keywords[sk]=kmail,identita
+X-KDE-Keywords[sl]=kmail,identiteta
 X-KDE-Keywords[sr]=kmail,identity,К‑пошта,идентитет
 X-KDE-Keywords[sr@ijekavian]=kmail,identity,К‑пошта,идентитет
 X-KDE-Keywords[sr@ijekavianlatin]=kmail,identity,K‑pošta,identitet
