--- a/kmail/kmail_config_misc.desktop
+++ b/kmail/kmail_config_misc.desktop
@@ -166,6 +166,7 @@ X-KDE-Keywords[pl]=kmail,rożne
 X-KDE-Keywords[pt]=kmail,diversos
 X-KDE-Keywords[pt_BR]=kmail,diversos
 X-KDE-Keywords[sk]=kmail,rôzne
+X-KDE-Keywords[sl]=kmail,razno
 X-KDE-Keywords[sr]=kmail,misc,К‑пошта,разно
 X-KDE-Keywords[sr@ijekavian]=kmail,misc,К‑пошта,разно
 X-KDE-Keywords[sr@ijekavianlatin]=kmail,misc,K‑pošta,razno
