--- a/kontact/plugins/specialdates/kcmsdsummary.desktop
+++ b/kontact/plugins/specialdates/kcmsdsummary.desktop
@@ -132,6 +132,7 @@ X-KDE-Keywords[pl]=urodziny, rocznica, wakacje, święta, konfiguruj, ustawienia
 X-KDE-Keywords[pt]=nascimento,aniversário,feriado,configurar,configuração
 X-KDE-Keywords[pt_BR]=aniversário,feriado,configurar,configurações
 X-KDE-Keywords[sk]=narodeniny, výročie, sviatok, nastaviť, nastavenia
+X-KDE-Keywords[sl]=rojstni dan, obletnica, praznik, nastavi, nastavitve
 X-KDE-Keywords[sr]=birthday,anniversary,holiday,configure,settings,рођендан,годишњица,празник,подесити,подешавање,поставке
 X-KDE-Keywords[sr@ijekavian]=birthday,anniversary,holiday,configure,settings,рођендан,годишњица,празник,подесити,подешавање,поставке
 X-KDE-Keywords[sr@ijekavianlatin]=birthday,anniversary,holiday,configure,settings,rođendan,godišnjica,praznik,podesiti,podešavanje,postavke
