--- a/libkdepim/ldap/kcmldap.desktop
+++ b/libkdepim/ldap/kcmldap.desktop
@@ -115,6 +115,7 @@ X-KDE-Keywords[nl]=kaddressbook, instellen, instellingen, LDAP
 X-KDE-Keywords[pl]=kaddressbook, konfiguruj, ustawienia, LDAP
 X-KDE-Keywords[pt]=kaddressbook, configurar, configuração, LDAP
 X-KDE-Keywords[pt_BR]=kaddressbook,configurar,configurações,LDAP
+X-KDE-Keywords[sl]=kaddressbook, nastavi, nastavitve, LDAP
 X-KDE-Keywords[sr]=kaddressbook,configure,settings,LDAP,К‑адресар,подешавање,подесити,поставке,ЛДАП
 X-KDE-Keywords[sr@ijekavian]=kaddressbook,configure,settings,LDAP,К‑адресар,подешавање,подесити,поставке,ЛДАП
 X-KDE-Keywords[sr@ijekavianlatin]=kaddressbook,configure,settings,LDAP,K‑adresar,podešavanje,podesiti,postavke,LDAP
