--- a/mailfilteragent/mailfilteragent.desktop
+++ b/mailfilteragent/mailfilteragent.desktop
@@ -50,6 +50,7 @@ Comment[nl]=Uitbreiding om e-mails te filteren
 Comment[pl]=Rozszerzenie do filtrowania poczty
 Comment[pt]=Extensão para filtrar as mensagens de e-mail
 Comment[pt_BR]=Extensão para filtros de e-mails
+Comment[sl]=Razširitev za filtriranje sporočil
 Comment[sr]=Проширење за филтрирање е‑поште
 Comment[sr@ijekavian]=Проширење за филтрирање е‑поште
 Comment[sr@ijekavianlatin]=Proširenje za filtriranje e‑pošte
