--- a/mobile/tasks/tasks-mobile.desktop
+++ b/mobile/tasks/tasks-mobile.desktop
@@ -25,6 +25,7 @@ Name[pl]=Zadania
 Name[pt]=Tarefas
 Name[pt_BR]=Tarefas
 Name[sk]=Úlohy
+Name[sl]=Opravila
 Name[sr]=Задаци
 Name[sr@ijekavian]=Задаци
 Name[sr@ijekavianlatin]=Zadaci
