--- a/kmail/kmail_config_accounts.desktop
+++ b/kmail/kmail_config_accounts.desktop
@@ -170,6 +170,7 @@ X-KDE-Keywords[pl]=kmail,konta
 X-KDE-Keywords[pt]=kmail,contas
 X-KDE-Keywords[pt_BR]=kmail,contas
 X-KDE-Keywords[sk]=kmail,účty
+X-KDE-Keywords[sl]=kmail,računi
 X-KDE-Keywords[sr]=kmail,accounts,К‑пошта,налог
 X-KDE-Keywords[sr@ijekavian]=kmail,accounts,К‑пошта,налог
 X-KDE-Keywords[sr@ijekavianlatin]=kmail,accounts,K‑pošta,nalog
