--- a/kmail/kmail_config_security.desktop
+++ b/kmail/kmail_config_security.desktop
@@ -174,6 +174,7 @@ X-KDE-Keywords[pl]=kmail,bezpieczeństwo
 X-KDE-Keywords[pt]=kmail,segurança
 X-KDE-Keywords[pt_BR]=kmail,segurança
 X-KDE-Keywords[sk]=kmail,bezpečnosť
+X-KDE-Keywords[sl]=kmail,varnost
 X-KDE-Keywords[sr]=kmail,security,К‑пошта,безбедност
 X-KDE-Keywords[sr@ijekavian]=kmail,security,К‑пошта,безбедност
 X-KDE-Keywords[sr@ijekavianlatin]=kmail,security,K‑pošta,bezbednost
