--- a/kontact/plugins/planner/kcmplanner.desktop
+++ b/kontact/plugins/planner/kcmplanner.desktop
@@ -130,6 +130,7 @@ X-KDE-Keywords[pl]=kalendarz, do zrobienia, konfiguruj, ustawienia
 X-KDE-Keywords[pt]=calendário,por-fazer,configurar,configuração
 X-KDE-Keywords[pt_BR]=calendário,a fazeres,configurar,configuração
 X-KDE-Keywords[sk]=kalendár, úlohy, nastaviť, nastavenia
+X-KDE-Keywords[sl]=koledar,za narediti,nastavi,nastavitve
 X-KDE-Keywords[sr]=calendar,todos,configure,settings,календар,обавезе,подесити,подешавање,поставке
 X-KDE-Keywords[sr@ijekavian]=calendar,todos,configure,settings,календар,обавезе,подесити,подешавање,поставке
 X-KDE-Keywords[sr@ijekavianlatin]=calendar,todos,configure,settings,kalendar,obaveze,podesiti,podešavanje,postavke
