--- a/korganizer/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/korganizer/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -158,6 +158,7 @@ X-KDE-Keywords[pl]=korganizer,grupowanie,planowanie
 X-KDE-Keywords[pt]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[pt_BR]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[sk]=korganizer,skupina,plánovanie
+X-KDE-Keywords[sl]=korganizer,skupina,razporejanje
 X-KDE-Keywords[sr]=korganizer,group,scheduling,К‑организатор,група,груписање,распоред,распоређивање
 X-KDE-Keywords[sr@ijekavian]=korganizer,group,scheduling,К‑организатор,група,груписање,распоред,распоређивање
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,group,scheduling,K‑organizator,grupa,grupisanje,raspored,raspoređivanje
