--- a/korganizer/kcmconfigs/korganizer_configtime.desktop
+++ b/korganizer/kcmconfigs/korganizer_configtime.desktop
@@ -136,6 +136,7 @@ X-KDE-Keywords[pl]=korganizer,czas
 X-KDE-Keywords[pt]=korganizer,hora
 X-KDE-Keywords[pt_BR]=korganizer,tempo
 X-KDE-Keywords[sk]=korganizer,čas
+X-KDE-Keywords[sl]=korganizer,čas
 X-KDE-Keywords[sr]=korganizer,time,К‑организатор,време
 X-KDE-Keywords[sr@ijekavian]=korganizer,time,К‑организатор,време
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,time,K‑organizator,vreme
