--- a/kmail/kmmainwin.rc
+++ b/kmail/kmmainwin.rc
@@ -2,7 +2,7 @@
      the same menu entries at the same place in KMail and Kontact  -->
 
 <!DOCTYPE kpartgui>
-<kpartgui version="478" name="kmmainwin" >
+<kpartgui version="479" name="kmmainwin" >
  <MenuBar>
   <Menu noMerge="1" name="file" >
    <text>&amp;File</text>
@@ -185,6 +185,8 @@
    <Action name="filter_log_viewer"/>
    <Separator/>
    <Action name="importWizard"/>
+   <Separator/>
+   <Action name="kmail_export_data"/>
    <Separator/>
    <Action name="tools_automatic_archiving"/>
    <Separator/>
