--- a/kmail/kmcomposerui.rc
+++ b/kmail/kmcomposerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" >
-<kpartgui version="415" name="kmcomposer" >
+<kpartgui version="416" name="kmcomposer" >
  <MenuBar>
   <Menu noMerge="1" name="file" >
    <text>&amp;Message</text>
@@ -30,6 +30,8 @@
    <Action name="tools_unquote"/>
    <Separator/>
    <Action name="insert_special_character"/>
+   <Separator/>
+   <Action name="insert_html"/>
   </Menu>
   <Menu noMerge="1" name="options" >
    <text>&amp;Options</text>
