--- a/kmail/kmcomposerui.rc
+++ b/kmail/kmcomposerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" >
-<kpartgui version="414" name="kmcomposer" >
+<kpartgui version="418" name="kmcomposer" >
  <MenuBar>
   <Menu noMerge="1" name="file" >
    <text>&amp;Message</text>
@@ -121,6 +121,7 @@
   <Action name="format_list_indent_more"/>
   <Action name="format_list_indent_less"/>
   <Action name="manage_link" />
+  <Action name="insert_horizontal_rule" />
   <Action name="add_image" />
  </ToolBar>
  <ToolBar noMerge="1" newline="true" hidden="true" enable="0" name="directionToolBar" iconText="icononly" >
