--- a/kmail/CMakeLists.txt
+++ b/kmail/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories(
   ${Boost_INCLUDE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}/../ontologies
   ${NEPOMUK_INCLUDES}
+  ${NEPOMUK_CORE_INCLUDE_DIR}
   ${SOPRANO_INCLUDE_DIR}
  )
 
