--- a/mobile/mail/CMakeLists.txt
+++ b/mobile/mail/CMakeLists.txt
@@ -19,6 +19,7 @@ include_directories(
   ${CMAKE_BINARY_DIR}/messageviewer
   ${Boost_INCLUDE_DIR}
   ${SOPRANO_INCLUDE_DIR}
+  ${NEPOMUK_CORE_INCLUDE_DIR}
 )
 
 set(kmail_mobile_srcs
