--- a/mailcommon/CMakeLists.txt
+++ b/mailcommon/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/filter
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${SOPRANO_INCLUDE_DIR}
+  ${NEPOMUK_CORE_INCLUDE_DIR}
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}")
