--- a/mailfilteragent/CMakeLists.txt
+++ b/mailfilteragent/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory( kconf_update )
 include_directories(
   ${Boost_INCLUDE_DIR}
   ${SOPRANO_INCLUDE_DIR}
+  ${NEPOMUK_CORE_INCLUDE_DIR}
 )
 
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}" )
