--- a/korganizer/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/korganizer/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -74,7 +74,7 @@ Comment[en_GB]=KOrganizer Colours and Fonts Configuration
 Comment[es]=Configuración de los colores y tipos de letra de KOrganizer
 Comment[et]=KOrganizeri värvide ja fontide seadistamine
 Comment[fa]=پیکربندی رنگها و قلمهای KOrganizer
-Comment[fi]=KOrganizer värien asetukset
+Comment[fi]=KOrganizerin värien asetukset
 Comment[fr]=Configuration des couleurs et des polices de KOrganizer
 Comment[ga]=Cumraíocht na nDathanna/gClónna le haghaidh KOrganizer
 Comment[gl]=Configuración das cores e dos tipos de letra do KOrganizer
