--- a/korganizer/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/korganizer/kcmconfigs/korganizer_configfreebusy.desktop
@@ -97,7 +97,7 @@ Comment[es]=Configuración de libre/ocupado de KOrganizer
 Comment[et]=KOrganizeri vaba/hõivatuse seadistused
 Comment[eu]=KOrganizer-en Libre/Lanpetuta konfigurazioa
 Comment[fa]=پیکربندی آزاد/اشغال KOrganizer
-Comment[fi]=KOrganizer vapaa/varattu asetukset
+Comment[fi]=KOrganizer – vapaa- ja varattu-asetukset
 Comment[fr]=Configuration de la disponibilité pour KOrganizer
 Comment[fy]=KOrganizer frij/beset ynstelle
 Comment[ga]=Cumraíocht Saor/Gafa KOrganizer
