--- a/korganizer/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/korganizer/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -92,7 +92,7 @@ Comment[es]=Configuración de la planificación de grupos de KOrganizer
 Comment[et]=Korganizeri grupitöö ajakavade seadistamine
 Comment[eu]=KOrganizer-en talde antolaketaren konfigurazioa
 Comment[fa]=پیکربندی زمان‌بندی گروه KOrganizer
-Comment[fi]=KOrganizer ryhmien aikataulujen asetukset
+Comment[fi]=KOrganizer - ryhmien aikataulujen asetukset
 Comment[fr]=Configuration de la planification des groupes de KOrganizer
 Comment[fy]=KOrganizer groepsplanning ynstelle
 Comment[ga]=Cumraíocht Sceidealta Grúpa KOrganizer
