SVN_SILENT made messages (.desktop file)

--- a/backupmail/backupmail.desktop
+++ b/backupmail/backupmail.desktop
@@ -7,6 +7,7 @@ Name[es]=Copia de respaldo del correo
 Name[et]=Kirjade varundamine
 Name[fr]=Sauvegarde de courriel
 Name[gl]=Copia de seguranza do correo
+Name[hu]=Levélmentő
 Name[ia]=Backup Mail (Retrocopia de posta)
 Name[it]=Copia di sicurezza della posta
 Name[km]=បម្រុងទុក​សំបុត្រ
@@ -33,6 +34,7 @@ Comment[es]=Copia de respaldo del correo permite guardar todos los datos de kmai
 Comment[et]=Kirjade varundamine võimaldab salvestada kõik KMaili andmed ja taastada need teises süsteemis.
 Comment[fr]=La sauvegarde de courriel permet de conserver les données de KMail et les restaurer dans un autre système.
 Comment[gl]=A Copia de seguranza do correo permite gardar os datos do kmail e restauralos noutro sistema.
+Comment[hu]=A Levélmentő lehetővé teszi az összes adat mentését a kmail programból és azok helyreállítását egy másik rendszeren.
 Comment[ia]=Backup Mail permitte de salveguardar tote datos ex kmail e restabili los in altere systema.
 Comment[it]=L'applicazione per la copia di sicurezza della posta consente di salvare tutti i dati da kmail e ripristinarli successivamente in un altro sistema.
 Comment[km]=បម្រុងទុក​សំបុត្រ​អនុញ្ញាត​ឲ្យ​រក្សាទុក​ទិន្នន័យ​ទាំងអស់​ពី kmail និង​ស្ដារ​វា​នៅ​ក្នុង​ប្រព័ន្ធ​ផ្សេង ។
