--- a/kontact/plugins/kmail/kcmkmailsummary.desktop
+++ b/kontact/plugins/kmail/kcmkmailsummary.desktop
@@ -50,6 +50,7 @@ Name[pt]=Novas Mensagens
 Name[pt_BR]=Novas mensagens
 Name[ro]=Mesaje noi
 Name[ru]=Новые письма
+Name[sk]=Nové správy
 Name[sl]=Nova sporočila
 Name[sr]=Нове поруке
 Name[sr@ijekavian]=Нове поруке
