--- a/kontact/plugins/korganizer/kcmapptsummary.desktop
+++ b/kontact/plugins/korganizer/kcmapptsummary.desktop
@@ -47,6 +47,7 @@ Name[pt]=Próximos Eventos
 Name[pt_BR]=Próximos eventos
 Name[ro]=Evenimente apropiate
 Name[ru]=Предстоящие события
+Name[sk]=Nové udalosti
 Name[sl]=Prihodnji dogodki
 Name[sr]=Наступајући догађаји
 Name[sr@ijekavian]=Наступајући догађаји
