--- a/ktnef/ktnef.desktop
+++ b/ktnef/ktnef.desktop
@@ -16,6 +16,7 @@ Name[fy]=KTnef
 Name[ga]=KTnef
 Name[gl]=KTnef
 Name[he]=KTnef
+Name[hu]=KTnef
 Name[ia]=KTnef
 Name[it]=KTnef
 Name[ka]=KTnef
@@ -55,6 +56,7 @@ GenericName[fr]=Afficheur de fichier TNEF
 GenericName[fy]=TNEF-triemwerjefte
 GenericName[ga]=Amharcán Comhad TNEF
 GenericName[gl]=Visor de ficheiros TNEF
+GenericName[hu]=TNEF-fájl megjelenítő
 GenericName[ia]=Visor de file TNEF
 GenericName[it]=Visualizzatore file TNEF
 GenericName[ka]=TNEF ფაილების დამთვალიერებელი
@@ -97,6 +99,7 @@ Comment[fi]=Näytin/purkaja TNEF-tiedostoille
 Comment[fr]=Un afficheur / extracteur de fichier TNEF
 Comment[fy]=In werjefteprogramma/Ãºtpakker foar TNEF-triemmen
 Comment[gl]=Un visor/extractor de ficheiros TNEF
+Comment[hu]=Egy megjelenítő/kibontó a TNEF fájlokhoz
 Comment[ia]=Un visor/extractor de files TNEF
 Comment[it]=Un visualizzatore/estrattore di file TNEF
 Comment[ka]= TNEF ფაილების ექსტრაქტორი/დამთვალიერებელი
