--- a/libkleo/libkleopatrarc.desktop
+++ b/libkleo/libkleopatrarc.desktop
@@ -382,7 +382,7 @@ Name[es]=Clave revocada
 Name[et]=Tühistatud võti
 Name[eu]=Errebokatutako gakoa
 Name[fa]=کلید لغو‌شده
-Name[fi]=Peruutettu avain
+Name[fi]=Peruttu avain
 Name[fr]=Clé révoquée
 Name[fy]=Ynlutsen kaai
 Name[gl]=Chave revogada
@@ -671,7 +671,7 @@ Name[et]=Kiipkaardi võti
 Name[fi]=Smartcard-avain
 Name[fr]=Clé SmartCard
 Name[gl]=Chave de smartcard
-Name[hu]=Intelligenskártya-kulcs
+Name[hu]=Intelligens kártya kulcs
 Name[ia]=Clave de carta intelligente
 Name[it]=Chiave smartcard
 Name[ja]=スマートカードの鍵
