--- a/archivemailagent/archivemailagent.desktop
+++ b/archivemailagent/archivemailagent.desktop
@@ -7,6 +7,7 @@ Name[es]=Agente de archivado de correo
 Name[et]=Kirjade arhiveerimise agent
 Name[fr]=Agent d'archivage de courriel
 Name[gl]=Axente Arquivar o correo
+Name[hu]=Levélarchiváló ügynök
 Name[ia]=Agente de Archivar posta
 Name[it]=Agente di archiviazione della posta
 Name[km]=ទុក​ភ្នាក់ងារ​សំបុត្រ​ក្នុង​ប័ណ្ណសារ
@@ -31,6 +32,7 @@ Comment[es]=Agente de archivado de correo
 Comment[et]=Kirjade arhiveerimise agent
 Comment[fr]=Agent d'archivage de courriel
 Comment[gl]=Axente Arquivar o correo
+Comment[hu]=Levélarchiváló ügynök
 Comment[ia]=Agente de Archivar posta
 Comment[it]=Agente di archiviazione della posta
 Comment[km]=ទុក​ភ្នាក់ងារ​សំបុត្រ​ក្នុង​ប័ណ្ណសារ
