--- a/mailfilteragent/mailfilteragent.desktop
+++ b/mailfilteragent/mailfilteragent.desktop
@@ -9,7 +9,7 @@ Name[es]=Agente de filtro de correo
 Name[et]=Kirjade filtreerimise agent
 Name[fr]=Agent de filtrage de messages
 Name[gl]=Axente de filtrado de correo
-Name[hu]=E-mail szűrő ügynök
+Name[hu]=Levélszűrő ügynök
 Name[ia]=Agente de filtro de posta
 Name[it]=Agente per il filtraggio della posta
 Name[kk]=Пошта сүзгіш агенті
