--- a/kmail/kcm_kpimidentities/kcm_kpimidentities.desktop
+++ b/kmail/kcm_kpimidentities/kcm_kpimidentities.desktop
@@ -28,7 +28,7 @@ Name[es]=Identidades
 Name[et]=Identiteedid
 Name[eu]=Identitateak
 Name[fa]=هویتها
-Name[fi]=Henkilöydet
+Name[fi]=Henkilöllisyydet
 Name[fr]=Identités
 Name[fy]=Identiteiten
 Name[ga]=Aitheantais
@@ -97,7 +97,7 @@ Comment[es]=Gestionar las identidades
 Comment[et]=Identiteetide haldus
 Comment[eu]=Identitateak kudeatu
 Comment[fa]=مدیریت هویتها
-Comment[fi]=Henkilöysasetukset
+Comment[fi]=Henkilöllisyysasetukset
 Comment[fr]=Gestion des identités
 Comment[fy]=Identiteiten beheare
 Comment[ga]=Bainistiú na nAitheantas
