--- a/kmail/kmcomposerui.rc
+++ b/kmail/kmcomposerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" >
-<kpartgui version="419" name="kmcomposer" >
+<kpartgui version="420" name="kmcomposer" >
  <MenuBar>
   <Menu noMerge="1" name="file" >
    <text>&amp;Message</text>
@@ -10,6 +10,8 @@
    <Action name="send_default_via" />
    <Action name="send_alternative" />
    <Action name="send_alternative_via" />
+   <Separator/>
+   <Action name="save_as_file" />
    <Action name="save_in_drafts" />
    <Action name="save_in_templates" />
    <Separator/>
